# xw-Rpc

./: CMakeLists.txt  README.md  README1.md
example/: user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: rpcapplication.h  rpcchannel.h  rpcconfig.h  rpcprovider.h
src/: CMakeLists.txt  logger.cc  rpc.pb.cc  rpc.pb.h  rpc.proto  rpcapplication.cc  rpcchannel.cc  rpcconfig.cc  rpccontroller.cc  rpcprovider.cc  zookeeperClient.cc
src/include/: lockqueue.h  logger.h  rpccontroller.h  zookeeperClient.h
test/protobuftest/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
